--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,24 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer utilities {
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background: #2D3748; /* Color del track de la barra */
+    border-radius: 100px;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background: linear-gradient(45deg, #4A5568, #718096); /* Gradiente */
+    border-radius: 100px;
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(45deg, #68D391, #48BB78); /* Color al hacer hover */
+  }
+}
